new project in vue

--- a/public/locales/en/portfolio.json
+++ b/public/locales/en/portfolio.json
@@ -6,5 +6,5 @@
   "info30": "CV in react; written in JS and React Framework; SCSS and SASS, fully responsive",
   "info40": "Flag of the world; written in JS and React Framework; SCSS and SASS; dealing with an API to bring the data, for desktop",
   "info50": "Alibaba shop; written in JS and React Framework; CSS ; shop with all functionalities of shop , for desktop",
-  "info60": "Under Construction"
+  "info60": "Fruit-store; written in JS and Vue Framework, utilization of Vuex; CSS ; shop with all functionalities of shop , for desktop"
 }
