--- a/public/locales/fr/portfolio.json
+++ b/public/locales/fr/portfolio.json
@@ -6,5 +6,5 @@
   "info30": "Project de CV en React; écrit en JS et le Framework React; SCSS et SASS, application entierement reactive",
   "info40": "Les drapeaux du monde; écrit en JS et le Framework React; SCSS et SASS; Traite avec une API pour charger les données, application bureau",
   "info50": "Magasin Alibaba ; écrit en JS et le Framework React; CSS ; Magasin avec toutes les fonctionalitees requises, application bureau",
-  "info60": "En Construction"
+  "info60": "Magasin de Fruit et Legumes ; écrit en JS et le Framework Vue,utilisation du store Vuex; CSS ; Magasin avec toutes les fonctionalitees requises, application bureau"
 }
