--- a/public/locales/heb/portfolio.json
+++ b/public/locales/heb/portfolio.json
@@ -6,5 +6,5 @@
   "info30": "קורות חיים ; written in JS and React Framework; SCSS and SASS, fully responsive",
   "info40": "דגלי העולם; written in JS and React Framework; SCSS and SASS; dealing with an API to bring the data, for desktop",
   "info50": "חנות אינטרנטית עליבבא; written in JS and React Framework; CSS ; shop with all functionalities of shop, for desktop",
-  "info60": "בתהליך בנייה"
+  "info60": "חנות פירות וירקות אינטרנטית ; written in JS and Vue Framework, utilization of Vuex; CSS ; shop with all functionalities of shop , for desktop"
 }
