--- a/public/locales/fr/portfolio.json
+++ b/public/locales/fr/portfolio.json
@@ -6,5 +6,6 @@
   "info30": "Project de CV en React; écrit en JS et le Framework React; SCSS et SASS, application entierement reactive",
   "info40": "Les drapeaux du monde; écrit en JS et le Framework React; SCSS et SASS; Traite avec une API pour charger les données, application bureau",
   "info50": "Magasin Alibaba ; écrit en JS et le Framework React; CSS ; Magasin avec toutes les fonctionalitees requises, application bureau",
-  "info60": "Magasin de Fruit et Legumes ; écrit en JS et le Framework Vue,utilisation du store Vuex; CSS ; Magasin avec toutes les fonctionalitees requises, application bureau"
+  "info60": "Magasin de Fruit et Légumes ; écrit en JS et le Framework Vue, utilisation du store Vuex; CSS ; Magasin avec toutes les fonctionalitées requises, application bureau",
+  "info70": "Project d'élection en ligne; écrit en JS et le Framework Vue, utilisation du store Vuex; et du vue router pour naviguer parmis les multiples pages, l'autentification et les données sont gerées dans firebase, application bureau"
 }
