fix text and bug

--- a/public/locales/fr/knowledge.json
+++ b/public/locales/fr/knowledge.json
@@ -26,7 +26,7 @@
   "exp-4.content": "Intendant,chef du personnel technique ,responsable de l'organisation des activitées exterieures .entre 100-150 vacanciers chaque semaine en haute-saison .",
   "education": "Education",
   "edu-1.title": "Developpeur Fullstack  - UDEMY (03/22-08/22)",
-  "edu-1.content": "Etude-Personelle: HTML,CSS,Javascript,React,MongoDB,SQL,Node JS,Typescript,Material UI,Postman,Python",
+  "edu-1.content": "Etude-Personelle: HTML,CSS,Javascript,React,Vue,MongoDB,SQL,Node JS,Typescript,Material UI,Postman,Python",
   "edu-2.title": "Developpeur Fullstack  - Binyamin Tech (10/21-03/22)",
   "edu-2.content": "HTML,CSS,Javascript,React,Mongo DB,SQL",
   "edu-3.title": "Programation - Machon Lev(09/00-06/01)",
