--- a/public/locales/heb/knowledge.json
+++ b/public/locales/heb/knowledge.json
@@ -26,7 +26,7 @@
   "exp-4.content": "מנהל רכישות,מנהל צוות עובדים טכניים,אחראי אירגון פעילויות חוץ.כ100-150 נופשים בשבוע בשיא העונה",
   "education": "חינוך",
   "edu-1.title": "מתכנת פולסטאק - UDEMY (03/22-08/22)",
-  "edu-1.content": "לימוד עצמי: HTML,CSS,Javascript,React,MongoDB,SQL,Node JS,Typescript,Material UI,Postman,Python",
+  "edu-1.content": "לימוד עצמי: HTML,CSS,Javascript,React,Vue,MongoDB,SQL,Node JS,Typescript,Material UI,Postman,Python",
   "edu-2.title": " מתכנת פולסטאק (10/21-03/22)",
   "edu-2.content": "HTML,CSS,Javascript,React,Mongo DB,SQL",
   "edu-3.title": "מתכנת מכון לב ירושלים (09/00-06/01) ",
