--- a/public/locales/en/knowledge.json
+++ b/public/locales/en/knowledge.json
@@ -26,7 +26,7 @@
   "exp-4.content": "Purchasing manager,technical staff manager,organization manager.between 100-150 vacationers each week in High season.",
   "education": "Education",
   "edu-1.title": "Fullstack developer - UDEMY (03/22-08/22)",
-  "edu-1.content": "Personal-study: HTML,CSS,Javascript,React,MongoDB,SQL,Node JS,Typescript,Material UI,Postman,Python",
+  "edu-1.content": "Personal-study: HTML,CSS,Javascript,React,Vue,MongoDB,SQL,Node JS,Typescript,Material UI,Postman,Python",
   "edu-2.title": "Fullstack developer - Binyamin Tech (10/21-03/22)",
   "edu-2.content": "HTML,CSS,Javascript,React,Mongo DB,SQL",
   "edu-3.title": "Computer Programming - Machon Lev(09/00-06/01)",
