fix text of portfolio

--- a/public/locales/en/portfolio.json
+++ b/public/locales/en/portfolio.json
@@ -3,7 +3,7 @@
   "return-to-projects-page": "return to Projects Page",
   "info10": "Cooking recipes project; written in JS and React Framework; Server in Node JS with JWT, Backend in No SQL Database: Mongo DB, fully responsive",
   "info20": "shopping list project; written in JS,TS and React Framework; Server in Node JS, Backend in No SQL Database: Mongo DB, for mobile",
-  "info30": "CV in react; written in JS and React Framework; SCSS and SASS, fully responsive",
+  "info30": "CV in react; written in JS and React Framework; SCSS and SASS; traduction in 3 languages with E18; fully responsive",
   "info40": "Flag of the world; written in JS and React Framework; SCSS and SASS; dealing with an API to bring the data, for desktop",
   "info50": "Alibaba shop; written in JS and React Framework; CSS ; shop with all functionalities of shop , for desktop",
   "info60": "Fruit-store; written in JS and Vue Framework, utilization of Vuex; CSS ; shop with all functionalities of shop , for desktop",
