--- a/public/locales/heb/portfolio.json
+++ b/public/locales/heb/portfolio.json
@@ -3,7 +3,7 @@
   "return-to-projects-page": "חזרה לדף הפרויקטים",
   "info10": "פרויקט של מתכונים, written in JS and React Framework; Server in Node JS with JWT, Backend in No SQL Database: Mongo DB, fully responsive",
   "info20": "פרויקט של רשימות קניות; written in JS,TS and React Framework; Server in Node JS, Backend in No SQL Database: Mongo DB, for mobile",
-  "info30": "קורות חיים ; written in JS and React Framework; SCSS and SASS, fully responsive",
+  "info30": "קורות חיים ; written in JS and React Framework; SCSS and SASS; traduction in 3 languages with E18; fully responsive",
   "info40": "דגלי העולם; written in JS and React Framework; SCSS and SASS; dealing with an API to bring the data, for desktop",
   "info50": "חנות אינטרנטית עליבבא; written in JS and React Framework; CSS ; shop with all functionalities of shop, for desktop",
   "info60": "חנות פירות וירקות אינטרנטית ; written in JS and Vue Framework, utilization of Vuex; CSS ; shop with all functionalities of shop , for desktop",
